# llamacpp-panel

./: .gitignore  MANUAL_TEST.md  README.md  pyproject.toml
docs/: panel-user-guide.md
llamacpp_panel/: __init__.py  __main__.py  app.py  args.py  config.py  gpu_enumeration.py  hf_download.py  logs.py  models_scan.py  monitoring.py  platform_util.py  supervisor.py
openspec/changes/archive/2026-04-23-llama-cpp-control-ui/: design.md  proposal.md
openspec/changes/archive/2026-04-23-llama-cpp-control-ui/specs/control-panel-ui/: spec.md
openspec/changes/archive/2026-04-23-v011-gpu-and-model-ui/: tasks.md
openspec/changes/archive/2026-04-23-v013-help-selection-docs/: design.md  tasks.md
openspec/changes/archive/2026-04-25-v020-windows-support/: README.md  design.md  tasks.md
openspec/changes/llama-cpp-control-ui/: tasks.md
openspec/changes/v011-gpu-and-model-ui/: design.md  proposal.md
openspec/changes/v013-help-selection-docs/: README.md  proposal.md  tasks.md
openspec/changes/v020-windows-support/: proposal.md  tasks.md
openspec/changes/v020-windows-support/specs/server-supervisor/: spec.md
openspec/specs/control-panel-ui/: spec.md
openspec/specs/gpu-devices/: spec.md
openspec/specs/model-library/: spec.md
openspec/specs/server-monitoring/: spec.md
openspec/specs/server-supervisor/: spec.md
tests/: test_args.py  test_config.py  test_gpu.py  test_monitoring.py  test_windows_support.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  HelpPanel.tsx  api.ts  index.css
(+8 files in other folders)
