[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llamacpp-panel"
version = "0.1.1"
description = "Local supervisor and web UI for llama.cpp llama-server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "huggingface_hub>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
llamacpp-panel = "llamacpp_panel.__main__:main"

[tool.setuptools.packages.find]
include = ["llamacpp_panel*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
